@@ -13,6 +13,7 @@
 
 *** 0.x.x
 
+Test execute AutoCheck.sh at least Unix system and Windows.
 Commit all changes in trunk working copy.
 Change version to release version in this working copy.
 Describe ChangeLog about this release.
@@ -26,6 +27,7 @@ Delete previous release files. (after a while)
 
 *** TODO 1.n.o or later
 
+Test execute AutoCheck.sh at least Unix system and Windows.
 When first release of major version up, make branch like BR-m.n.x (ex: BR-1.0.x, BR-1.1.x)
 Commit all changes in branch working copy.
 Change version to release version in this working copy.
